fix(config): update database connection string in appsettings.json
- Change Data Source from IP address to hostname SOFTLAP-2
- Keep other connection string parameters unchanged
- Ensure appsettings.json reflects new database server location

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "AuthDbContextConnection": "Data Source=192.168.10.116;Initial Catalog=MilkBakeryDb;User ID=sa;Password=system;Trusted_Connection=false;MultipleActiveResultSets=true;TrustServerCertificate=True;Encrypt=True;"
+    "AuthDbContextConnection": "Data Source=SOFTLAP-2;Initial Catalog=MilkBakeryDb;User ID=sa;Password=system;Trusted_Connection=false;MultipleActiveResultSets=true;TrustServerCertificate=True;Encrypt=True;"
   }
 }
